--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
+    "@mui/icons-material": "^6.4.1",
+    "@mui/material": "^6.4.1",
     "@tailwindcss/forms": "^0.5.10",
     "@vercel/postgres": "^0.10.0",
     "autoprefixer": "10.4.20",
